crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@93.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1,2,3]', '$[last ? (@.type() == \"string\")]', silent => true);"
---
SelectStmt@0..87
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..85
    FuncCall@7..85
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'[1,2,3]'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..69
        Sconst@35..69 "'$[last ? (@.type() = ..."
      Ascii44@69..70 ","
      Whitespace@70..71 " "
      NamedArgExpr@71..85
        Ident@71..77 "silent"
        Whitespace@77..78 " "
        EqualsGreater@78..80 "=>"
        Whitespace@80..81 " "
        AConst@81..85
          TrueP@81..85 "true"
  Ascii41@85..86 ")"
  Ascii59@86..87 ";"

