crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@94.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('{\"a\": 10}', '$');"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..47
    List@14..47
      FuncCall@14..47
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..42
          Sconst@31..42 "'{\"a\": 10}'"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        AConst@44..47
          Sconst@44..47 "'$'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

