crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@96.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('{\"a\": 10}', '$ ? (@.a < $value)', '1');"
---
SelectStmt@0..71
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..69
    List@14..69
      FuncCall@14..69
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..42
          Sconst@31..42 "'{\"a\": 10}'"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        AConst@44..64
          Sconst@44..64 "'$ ? (@.a < $value)'"
        Ascii44@64..65 ","
        Whitespace@65..66 " "
        AConst@66..69
          Sconst@66..69 "'1'"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

