crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@101.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (@.a < 0.1)'::jsonpath;"
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..34
    TypeCast@7..34
      AConst@7..24
        Sconst@7..24 "'$ ? (@.a < 0.1)'"
      Typecast@24..26 "::"
      TypeName@26..34
        Ident@26..34 "jsonpath"
  Ascii59@34..35 ";"

